// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components|Navigation/RoutedLink w/ href 1`] = `
.emotion-0 {
  color: inherit;
}

<a
  class="emotion-0 emotion-1"
  href="http://google.com"
>
  Link
</a>
`;

exports[`Storyshots Components|Navigation/RoutedLink w/ onClick 1`] = `
.emotion-0 {
  color: inherit;
}

<a
  class="emotion-0 emotion-1"
  href="/"
>
  Try clicking with different mouse buttons and modifier keys (shift/ctrl/alt/cmd)
</a>
`;
